<resources>
    <string name="app_name">DLZaliczenie</string>
    <string name="action_settings">Settings</string>
    <string name="hello">Wpisz dane aby obliczyć spalanie…</string>
    <string name="milage">Dystans</string>
    <string name="fuel_consumption">Zużyte paliwo</string>
    <string name="mpg">średnie spalanie</string>
    <string name="count">Oblicz</string>
    <string name="vehicles_list_heading">Lista pojazdów:</string>

    <string name="title_placeholder">Title</string>
    <string name="news_placeholder">News</string>
    <string name="sports_info_placeholder">Here is some news</string>
    <string name="empty_screen">We do not have anything\nhere right now. Please Retry</string>
    <string name="btn_retry">Retry</string>
</resources>
